fix collapse button

--- a/WebApp.ContactManagerSPA/Content/contactmanager.css
+++ b/WebApp.ContactManagerSPA/Content/contactmanager.css
@@ -65,8 +65,16 @@ body {
 .navbar-inverse .navbar-toggle:focus,
 .navbar-inverse .navbar-toggle:active {
     margin-bottom: 0;
-    border-color: #2b3e50;
+    border:none;
     background-color: #2b3e50;
+}
+
+.navbar-inverse .navbar-toggle .icon-bar{
+    background-color:#9d9d9d
+}
+
+.navbar-inverse .navbar-toggle:hover > .icon-bar{
+    background-color:white;
 }
 
 .form-horizontal .control-label {
@@ -86,10 +94,6 @@ body {
     background-color: #2b3e50;
 }
 
-.navbar-nav > li > a span{
-    padding-right:5px
-}
-
 .navbar-nav > li > input{
     margin-top: 10px;
 } 
@@ -99,3 +103,4 @@ body {
 .has-error .form-control{
     color:#ff0000;
 }
+
